src/objects/Community_News__c.object
<CustomObject>
    <description>This object stores News stories (links or text content) that are published to the Community.</description>
    <fields>
        <fullName>Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>determines if a news item will be an alert that appears at top of page</description>
        <label>Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Comments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When selected, Community Users will be allowed to post Comments on a news article as long as the Comment Expiration has not passed.</description>
        <inlineHelpText>When selected, Community Users will be allowed to post Comments on a news article as long as the Comment Expiration has not passed.</inlineHelpText>
        <label>Allow Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment_Expiration_Date__c</fullName>
        <description>Represents the Date/Time when the News Article prevents new comments from being added to the News Article.  The Time is based on the Organizations Time Zone listed in Salesforce.</description>
        <inlineHelpText>Represents the Date/Time when the News Article prevents new comments from being added to the News Article.  The Time is based on the Organizations Time Zone listed in Salesforce.</inlineHelpText>
        <label>Comment Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>Represents the full text description of the news article that will be displayed in the Community Portal.</description>
        <inlineHelpText>Represents the full text description of the news article that will be displayed in the Community Portal.</inlineHelpText>
        <label>Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <description>Represents the Date/Time when the News Article will be posted in the Community Portal.  This will be based on the Organizations Time Zone in Salesforce.</description>
        <inlineHelpText>Represents the Date/Time when the News Article will be posted in the Community Portal.  This will be based on the Organizations Time Zone in Salesforce.</inlineHelpText>
        <label>Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Represents the Date/Time when the News Article will be removed from the Community Portal.  The time will be based on the Organizations Time Zone in Salesforce.</description>
        <inlineHelpText>Represents the Date/Time when the News Article will be removed from the Community Portal.  The time will be based on the Organizations Time Zone in Salesforce.</inlineHelpText>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Feature_on_Home_Page_Slot__c</fullName>
        <description>Use this field if this record will be featured on the Home Page.  The selected value will determine the order of this item in the Campus Updates section.</description>
        <label>Feature on Home Page - Slot #</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image_Path__c</fullName>
        <description>Indicates the path where the image is stored and pulled from to display in the Community Portal.</description>
        <inlineHelpText>Indicates the path where the image is stored and pulled from to display in the Community Portal.</inlineHelpText>
        <label>Image Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Entry_Sticky__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the News Article will always appear at the top of the News Article Listed.  If multiple active Sticky, articles will be listed in Descending Order by Entry Date field.</description>
        <inlineHelpText>When selected, the News Article will always appear at the top of the News Article Listed.  If multiple active Sticky, articles will be listed in Descending Order by Entry Date field.</inlineHelpText>
        <label>Make Entry Sticky</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>News_SF_ID__c</fullName>
        <description>Represents the 18 digit Salesforce Unique ID of the News record.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the 18 digit Salesforce Unique ID of the News record.</inlineHelpText>
        <label>News SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TEST_URL__c</fullName>
        <description>TEST - DO NOT PACKAGE</description>
        <label>TEST URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Teaser__c</fullName>
        <description>Represents a short description of the News article that will be posted in the Community Portal.</description>
        <inlineHelpText>Represents a short description of the News article that will be posted in the Community Portal.</inlineHelpText>
        <label>Teaser</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Represents the title of the news that will be displayed in the Community Portal.</description>
        <inlineHelpText>Represents the title of the news that will be displayed in the Community Portal.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates the type of news that is being added.  Internal represents a news article pasted into Salesforce and an External would be a link to an article posted somewhere on the internet.</description>
        <inlineHelpText>Indicates the type of news that is being added.  Internal represents a news article pasted into Salesforce and an External would be a link to an article posted somewhere on the internet.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>Allows a hyperlink to be provided for an External news story.</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Community News</label>
    <listViews>
        <fullName>Alerts_Active</fullName>
        <booleanFilter>(1 AND 2) or (1 and 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Alert__c</columns>
        <columns>Title__c</columns>
        <columns>Type__c</columns>
        <columns>Teaser__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Alert__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Alerts - Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Alerts_Archived</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Type__c</columns>
        <columns>Teaser__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Alert__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Alerts - Archved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_News_Active</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Teaser__c</columns>
        <columns>Type__c</columns>
        <columns>Alert__c</columns>
        <columns>Feature_on_Home_Page_Slot__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Make_Entry_Sticky__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entry_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All News - Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_News_Archived</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Teaser__c</columns>
        <columns>Type__c</columns>
        <columns>Alert__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Make_Entry_Sticky__c</columns>
        <columns>Allow_Comments__c</columns>
        <columns>Comment_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All News - Archived</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>News.{yy}{mm}{0}</displayFormat>
        <label>News</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Alert_cannot_have_Home_Page_Slot</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 Alert__c ,
 NOT(ISBLANK(TEXT( Feature_on_Home_Page_Slot__c )))
)</errorConditionFormula>
        <errorMessage>If a news item is tagged as an Alert, it should not have a value for home page slot number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Teaser_required_for_Internal</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Type__c , &apos;Internal&apos; ) &amp;&amp; ISBLANK( Teaser__c )</errorConditionFormula>
        <errorMessage>You must populate the Teaser for an Internal story</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>URL_required_for_External</fullName>
        <active>true</active>
        <description>If the News Type is External, the URL is required.</description>
        <errorConditionFormula>ISPICKVAL( Type__c , &apos;External&apos; ) &amp;&amp; ISBLANK( URL__c )</errorConditionFormula>
        <errorMessage>You must populate the URL for an External story</errorMessage>
    </validationRules>
</CustomObject>